--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -2,7 +2,7 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
-    background-color: beige;
+    background-color: aqua;
 }
 
 main {
