--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -17,14 +17,15 @@
                 <div class="nav-wrapper">
                     <ul>
                         <li>
-                            <a href="/" class="left brand-logo">
+                            <a href="{% url 'home' %}" class="left brand-logo">
                                 &nbsp;&nbsp;Finch Collector
                             </a>
                         </li>
                     </ul>
                     <ul class="right">
-                        <li><a href="/about">About</a></li>
-                        <li><a href="/finches">All Finches</a></li>
+                        <li><a href="{% url 'about' %}">About</a></li>
+                        <li><a href="{% url 'create' %}">Add Finch</a></li>
+                        <li><a href="{% url 'index' %}">All Finches</a></li>
                     </ul>
                 </div>
             </nav>
